traq-server/backend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: traq-backend
  name: traq-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: traq-backend
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: traq-backend
    spec:
      nodeSelector:
        kubernetes.io/hostname: c1-203.tokyotech.org
      volumes:
        - name: config
          configMap:
            name: traq-server-config
        - name: keys
          secret:
            secretName: traq-config-secrets
      containers:
        - image: ghcr.io/traptitech/traq:3.24.9
          name: traq-backend
          ports:
            - containerPort: 3000
              protocol: TCP
          volumeMounts:
            - mountPath: /keys
              name: keys
              readOnly: true
            - mountPath: /app/config.yml
              name: traq-server-config
              readOnly: true
              subPath: config/traq.yaml
      restartPolicy: Always
