traq-server/backend/service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml
    kompose.version: 1.35.0 (9532ceef3)
  labels:
    io.kompose.service: traq-backend
  name: traq-backend
spec:
  ports:
    - name: "8001"
      port: 8001
      targetPort: 3000
  selector:
    io.kompose.service: traq-backend
